[package]
name = "ParticleLife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.130.0"
rand = "0.8.5"
piston = "0.54.0"
fps_counter = "2.0.0"
find_folder = "0.3"

[profile.release]
debug = true